force-app/main/default/objects/Travel_Package__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncludesFlights__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Includes Flights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludesHotel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Includes Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFeatured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PricePerPerson__c</fullName>
        <label>Price Per Person</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TravelStyle__c</fullName>
        <label>Travel Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adventure</fullName>
                </value>
                <value>
                    <fullName>Relaxation</fullName>
                </value>
                <value>
                    <fullName>Cultural</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Travel Package</label>
    <listViews>
        <fullName>Adventure_Packages</fullName>
        <columns>NAME</columns>
        <columns>Destination__c</columns>
        <columns>Duration__c</columns>
        <columns>PricePerPerson__c</columns>
        <columns>Rating__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TravelStyle__c</field>
            <operation>equals</operation>
            <value>Adventure</value>
        </filters>
        <label>Adventure Packages</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Packages</fullName>
        <columns>NAME</columns>
        <columns>Destination__c</columns>
        <columns>Duration__c</columns>
        <columns>TravelStyle__c</columns>
        <columns>PricePerPerson__c</columns>
        <columns>Rating__c</columns>
        <columns>IsFeatured__c</columns>
        <columns>IncludesFlights__c</columns>
        <columns>IncludesHotel__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Packages</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Featured_Packages</fullName>
        <columns>NAME</columns>
        <columns>Destination__c</columns>
        <columns>Duration__c</columns>
        <columns>TravelStyle__c</columns>
        <columns>PricePerPerson__c</columns>
        <columns>Rating__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsFeatured__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Featured Packages</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travel Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>